--- a/deploy/service.yml
+++ b/deploy/service.yml
@@ -1,4 +1,4 @@
-piVersion: v1
+apiVersion: v1
 kind: Service
 metadata:
   name: express-docker
@@ -14,5 +14,5 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      nodePort: 3001
+      nodePort: 30000
       port: 3001
